casme-II and sammlong

--- a/datasets/utils/test.ipynb
+++ b/datasets/utils/test.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = AU4GraphDataset()\n"
+    "dataset = AU4GraphDataset()"
    ]
   },
   {
